fixed file path

--- a/B1e/Standard Elements/Navigation.html
+++ b/B1e/Standard Elements/Navigation.html
@@ -1,4 +1,4 @@
-<link href="Stylesheets\Navigation.css" rel="stylesheet">
+<link href="Stylesheets/Navigation.css" rel="stylesheet">
 <ul>
   <li>
     <a href="/">
