--- a/B1e/index.html
+++ b/B1e/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <script src="Scripts/ImportNavigation.js"></script>
-  <link href="Stylesheets\MainStylesheet.css" rel="stylesheet">
+  <link href="Stylesheets/MainStylesheet.css" rel="stylesheet">
   <title>B1E</title>
 </head>
 
