--- a/B1e/index.html
+++ b/B1e/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <h1>B1E</h1>
-    <p>Willkomen auf der Seite der B1E!</p>
+    <p id="welcomeText">Willkomen auf der Seite der B1E!</p>
   </main>
 </body>
 
