--- a/B1e/Standard Elements/Navigation.html
+++ b/B1e/Standard Elements/Navigation.html
@@ -1,21 +1,22 @@
 <link href="Stylesheets/Navigation.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <ul>
-  <li>
-    <a href="/">
-      <img class="menuLogo" src="Images/Logo/logo.png" alt="© Sushmita Mohabir">
-    </a>
-  </li>
+  <li><a href="/"><img class="menuLogo" src="Images/Logo/logo.png" alt="© Sushmita Mohabir"></a></li>
+  <li><a href="/B1e"><i class="fa fa-home"></i>  Startseite</a></li>
   <li class="dropdown">
-    <a href="javascript:void(0)" class="dropbtn">Fächer</a>
+    <a href="javascript:void(0)" class="dropbtn"><i class="fa fa-book"></i>  Fächer</a>
     <div class="dropdown-content">
-      <a href="/Deutsch.html">Deutsch</a>
-      <a href="/Klassen Lehr Stunde.html">Klassen Lehr Stunde</a>
-      <a href="/Französisch.html">Französisch</a>
-      <a href="/Englisch.html">Englisch</a>
-      <a href="/Geschichte.html">Geschichte</a>
-      <a href="/Mathematik.html">Mathematik</a>
-      <a href="/Geografie.html">Geografie</a>
+      <a href="Deutsch.html">Deutsch</a>
+      <a href="Klassen Lehr Stunde.html">Klassen Lehr Stunde</a>
+      <a href="Französisch.html">Französisch</a>
+      <a href="Englisch.html">Englisch</a>
+      <a href="Geschichte.html">Geschichte</a>
+      <a href="Mathematik.html">Mathematik</a>
+      <a href="Geografie.html">Geografie</a>
     </div>
   </li>
-  <li><a href="/Zusammenfassungen.html">Zusammenfassungen</a></li>
+  <li><a href="Zusammenfassungen.html"><i class="fa fa-wpforms"></i>  Zusammenfassungen</a></li>
+  <li><a href="Kalender.html"><i class="fa fa-calendar"></i>  Kalender</a></li>
+  <li><a href="Spiele.html"><i class="fa fa-gamepad"></i>  Spiele</a></li>
 </ul>
