--- a/B1e/index.html
+++ b/B1e/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <script src="Scripts/ImportNavigation.js"></script>
   <link href="Stylesheets/MainStylesheet.css" rel="stylesheet">
-  <title>B1E</title>
+  <title>B1e</title>
 </head>
 
 <body>
   <main>
-    <h1>B1E</h1>
-    <p id="welcomeText">Willkomen auf der Seite der B1E!</p>
+    <h1>Startseite</h1>
+    <p id="welcomeText">Willkommen auf der Seite der B1e!</p>
   </main>
 </body>
 
